# retro

./: README.md  pyproject.toml  requirements.txt  test.csv  test.qc.csv
retro/: main.py  nucleotide_control.py
retro.egg-info/: requires.txt
src/: pyproject.toml
src/retro/: main.py
src/retro.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
